--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Izračun plače za leto 2018</title>
+    <title>Izračun plače za leto 2019</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,6 +30,16 @@
   </head>
 
   <body class="text-center">
+    <div class="jumbotron">
+      <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-5">Izračun plače za leto 2019</h1>
+        <p>
+          Za izračun plače vpišete samo 3 podatke: znesek bruto plače, znesek
+          prevoza in malice ter število vzdrževanih članov (npr. otrok). Izračun
+          je izključno informativne narave.
+        </p>
+      </div>
+    </div>
     <app-root> </app-root>
 
     <!-- Optional JavaScript -->
